Fixed weirdness where toolkit menu items that were collapsed and height was set to 0% they weren't actually collapsing. Guessing this has to do with making the doctype html because seemingly no other changes were made to this file prior to it not working.

--- a/.core/components/Toolkit/Menu/_style.scss
+++ b/.core/components/Toolkit/Menu/_style.scss
@@ -144,7 +144,6 @@
 
             &.expanded {
                 ul {
-                    transition: height .25s ease-in-out;
                     height: auto;
                     overflow: visible;
                 }
@@ -160,9 +159,9 @@
 
             &.collapsed {
                 ul {
-                    transition: height .25s ease-in-out;
-                    height: 0%;
+                    height: 0px;
                     overflow: hidden;
+                    display: none;
                 }
 
                 .heading-toggle {
